--- a/ConstrainedGame/.gitignore
+++ b/ConstrainedGame/.gitignore
@@ -1,4 +1,4 @@
-
+../Build/
 # Created by https://www.gitignore.io/api/linux,unity,csharp,windows,visualstudio,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=linux,unity,csharp,windows,visualstudio,visualstudiocode
 
